# pydantic-openapi-schema

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  gen_ref_pages.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml  sitemap.xml  sonar-project.properties
.github/workflows/: ci.yaml  codeql.yml
docs/: index.md
pydantic_openapi_schema/: __init__.py
pydantic_openapi_schema/utils/: utils.py
pydantic_openapi_schema/v3_0_3/: __init__.py  callback.py  components.py  contact.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  open_api.py  operation.py  parameter.py  path_item.py  paths.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  util.py  xml.py
pydantic_openapi_schema/v3_1_0/: __init__.py  callback.py  components.py  contact.py  discriminator.py  encoding.py  example.py  external_documentation.py  header.py  info.py  license.py  link.py  media_type.py  oauth_flow.py  oauth_flows.py  open_api.py  operation.py  parameter.py  path_item.py  paths.py  reference.py  request_body.py  response.py  responses.py  schema.py  security_requirement.py  security_scheme.py  server.py  server_variable.py  tag.py  util.py  xml.py
reference/SUMMARY/: index.html
reference/pydantic_openapi_schema/: index.html
reference/pydantic_openapi_schema/utils/: index.html
reference/pydantic_openapi_schema/utils/utils/: index.html
reference/pydantic_openapi_schema/v3_1_0/: index.html
reference/pydantic_openapi_schema/v3_1_0/callback/: index.html
reference/pydantic_openapi_schema/v3_1_0/components/: index.html
reference/pydantic_openapi_schema/v3_1_0/contact/: index.html
reference/pydantic_openapi_schema/v3_1_0/discriminator/: index.html
reference/pydantic_openapi_schema/v3_1_0/encoding/: index.html
reference/pydantic_openapi_schema/v3_1_0/example/: index.html
reference/pydantic_openapi_schema/v3_1_0/external_documentation/: index.html
reference/pydantic_openapi_schema/v3_1_0/header/: index.html
reference/pydantic_openapi_schema/v3_1_0/info/: index.html
reference/pydantic_openapi_schema/v3_1_0/license/: index.html
reference/pydantic_openapi_schema/v3_1_0/link/: index.html
reference/pydantic_openapi_schema/v3_1_0/media_type/: index.html
reference/pydantic_openapi_schema/v3_1_0/oauth_flow/: index.html
reference/pydantic_openapi_schema/v3_1_0/oauth_flows/: index.html
reference/pydantic_openapi_schema/v3_1_0/open_api/: index.html
reference/pydantic_openapi_schema/v3_1_0/operation/: index.html
reference/pydantic_openapi_schema/v3_1_0/parameter/: index.html
reference/pydantic_openapi_schema/v3_1_0/path_item/: index.html
reference/pydantic_openapi_schema/v3_1_0/paths/: index.html
reference/pydantic_openapi_schema/v3_1_0/reference/: index.html
reference/pydantic_openapi_schema/v3_1_0/request_body/: index.html
reference/pydantic_openapi_schema/v3_1_0/response/: index.html
reference/pydantic_openapi_schema/v3_1_0/responses/: index.html
reference/pydantic_openapi_schema/v3_1_0/schema/: index.html
search/: search_index.json
tests/data/: swagger_openapi_v3.0.1.json
tests/v3_0_3/: test_config_example.py  test_util.py
tests/v3_1_0/: test_alias.py  test_config_example.py  test_empty_schema.py  test_example.py  test_pydantic_field.py  test_schema.py  test_security_scheme.py  test_swagger_openapi_v3.py  test_util.py  utils.py
(+6 files in other folders)
